cabal-version:      2.0
name:               cabal2json
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
copyright:          2021 Nikolay "Lierdakil" Yakimov
maintainer:         root@livid.pp.ru
author:             Nikolay "Lierdakil" Yakimov
homepage:           https://github.com/atom-haskell/cabal2json#readme
bug-reports:        https://github.com/atom-haskell/cabal2json/issues
description:
    Please see the README on GitHub at <https://github.com/atom-haskell/cabal2json#readme>

build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/atom-haskell/cabal2json

executable cabal2json
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        Cabal ^>=3.10,
        aeson >=1.5.6.0 && <3,
        base >=4.7 && <5,
        bytestring >=0.10.12.0 && <0.12,
        filepath >=1.4.2.1 && <1.5
